j'ai finalisé le header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <!-- le logo ici... -->
                 <div class="logo">
                     <p class="rond">A</P>
-                    <P class="nom"><span>Aggée </span>SENOU</P>
+                    <P class="nom"><span>Aggée </span>M. SENOU</P>
                 </div>
 
                 <!-- le menu ici -->
@@ -35,28 +35,27 @@
 
                 </menu>
             </nav>
-
-            <div class="avatar">
-                <!-- l'image ici -->
-                <img src="./asset/WhatsApp Image 2023-04-17 at 15.18.27.jpeg" alt="avatar">
-            </div>
-
-            <!-- Votre introduction ici -->
-            <div class="bio">
-                <small>Full-stack developer</small>
-                <h1>Aggée SENOU</h1>
-                <!-- Vous pouvez bien emplacer le texte avec votre info personnelle -->
-                <p>J'ai un amour propre pour tout ce qui est du developpement, c'est ainsi que j'ai décidé d'intégrer le
-                    niveau d'entrée de formation en développement web à Growcampus.</p>
-
-                <a href="#lien_de_téléchargement_ici" download>
-                    <button>Download CV</button>
-                </a>
-
-                <button class="contact">Contact</button>
+            <div class="bio_section">
+                <div class="avatar">
+                    <!-- l'image ici -->
+                    <img src="./asset/WhatsApp Image 2023-04-17 at 15.18.27.jpeg" alt="avatar">
+                </div>
+                <div class="bio">
+                    <small>Full-stack developer</small>
+                    <h1>Aggée SENOU</h1>
+                    <!-- Vous pouvez bien emplacer le texte avec votre info personnelle -->
+                    <p>J'ai un amour propre pour tout ce qui est du developpement, c'est ainsi que j'ai décidé
+                        d'intégrer le
+                        niveau d'entrée de formation en développement web à Growcampus.</p>
+                    <div class="bio_buttons">
+                        <a href="C:\Users\USER\Documents\Curriculum Vitae Aggée.pdf" download>
+                            <button>Download CV</button>
+                        </a>
+                        <button class="contact">Contact</button>
+                    </div>
+                </div>
             </div>
         </header>
-
         <section class="container specialites">
             <h2>What I do</h2>
 
