I modified the section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aggée-Senou</title>
     <link rel="stylesheet" href="./CSS/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +15,6 @@
         <!-- <div class="en-tete">
             <small>Impixels.com</small>
         </div> -->
-
         <header>
             <nav>
                 <!-- le logo ici... -->
@@ -22,7 +22,6 @@
                     <p class="rond">A</P>
                     <P class="nom"><span>Aggée </span>M. SENOU</P>
                 </div>
-
                 <!-- le menu ici -->
                 <menu class="main-menu">
                     <!-- Insérer tous les options du menu... -->
@@ -32,7 +31,6 @@
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Go it Now</a></li>
-
                 </menu>
             </nav>
             <div class="bio_section">
@@ -57,47 +55,61 @@
             </div>
         </header>
         <section class="container specialites">
-            <h2>What I do</h2>
-
+            <h2>what I do</h2>
             <!-- Vous pouvez bien mettre vos infos personalisées dans ces section... -->
             <div class="specialite">
-                <h3>Copywrite</h3>
                 <!-- Une icône ici... -->
-                <p>Mauris nequelibero, aliquet vol mollis nec, ouismod sed tellus. Mauris convallis dictum elit id
-                    volutpad. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt
-                    turpis turpis tempus ex.</p>
+                <span class="material-icons">
+                    style
+                </span>
+                <div class="content">
+                    <h3>Copywrite</h3>
+                    <p>Mauris nequelibero, aliquet vol mollis nec, ouismod sed tellus. Mauris convallis dictum elit id
+                        volutpad. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt
+                        turpis turpis tempus ex.</p>
+                </div>
             </div>
-
             <div class="specialite">
-                <h3>Web Design</h3>
                 <!-- Une icône ici... -->
-                <p>Mauris nequelibero, aliquet vol mollis nec, ouismod sed tellus. Mauris convallis dictum elit id
-                    volutpad. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt
-                    turpis turpis tempus ex.</p>
+                <span class="material-icons">
+                    design_services
+                </span>
+                <div class="content">
+                    <h3>Web Design</h3>
+                    <p>Mauris nequelibero, aliquet vol mollis nec, ouismod sed tellus. Mauris convallis dictum elit id
+                        volutpad. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt
+                        turpis turpis tempus ex.</p>
+                </div>
             </div>
-
             <div class="specialite">
-                <h3>Ecommerce</h3>
                 <!-- Une icône ici... -->
-                <p>Mauris nequelibero, aliquet vol mollis nec, ouismod sed tellus. Mauris convallis dictum elit id
-                    volutpad. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt
-                    turpis turpis tempus ex.</p>
+                <span class="material-icons">
+                    devices
+                </span>
+                <div class="content">
+                    <h3>Ecommerce</h3>
+                    <p>Mauris nequelibero, aliquet vol mollis nec, ouismod sed tellus. Mauris convallis dictum elit id
+                        volutpad. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt
+                        turpis turpis tempus ex.</p>
+                </div>
             </div>
-
             <div class="specialite">
-                <h3>Marketing</h3>
                 <!-- Une icône ici... -->
-                <p>Mauris nequelibero, aliquet vol mollis nec, ouismod sed tellus. Mauris convallis dictum elit id
-                    volutpad. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt
-                    turpis turpis tempus ex.</p>
+                <span class="material-icons">
+                    developer_mode
+                </span>
+                <div class="content">
+                    <h3>Marketing</h3>
+                    <p>Mauris nequelibero, aliquet vol mollis nec, ouismod sed tellus. Mauris convallis dictum elit id
+                        volutpad. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt
+                        turpis turpis tempus ex.</p>
+                </div>
             </div>
         </section>
-
         <section class="container testimonials">
             <h2>Testimonials</h2>
         </section>
     </main>
-
 </body>
 
 </html>
